# CoHub

./: .gitignore  search-index.json
.playwright-cli/: page-2026-03-21T13-56-41-000Z.yml  page-2026-03-21T13-58-57-549Z.yml  page-2026-03-21T13-59-29-661Z.yml  page-2026-03-21T14-00-46-307Z.yml  page-2026-03-21T14-01-12-710Z.yml
cohub-recruiting-plugin/: MIGRATION.md  README.md  pyproject.toml
cohub-recruiting-plugin/src/cohub_recruiting/: __init__.py  config.py  hooks.py  installer.py  match_reasoner.py  tool_guard.py
cohub-recruiting-plugin/src/cohub_recruiting/boss_mcp/: __init__.py  __main__.py  extractors.py  server.py  service.py  session.py
cohub-recruiting-plugin/src/cohub_recruiting/liepin_mcp/: __main__.py  extractors.py  models.py  server.py  service.py  session.py
cohub-recruiting-plugin/src/cohub_recruiting/skill/: SKILL.md
cohub-recruiting-plugin/src/cohub_recruiting/skill/references/: mcp-config.example.json  query-contract.md  setup.md
cohub-recruiting-plugin/src/cohub_recruiting/zhaopin_mcp/: __main__.py  extractors.py  models.py  server.py  service.py  session.py
cohub-recruiting-plugin/tests/: conftest.py  test_boss_extractors.py  test_boss_service.py  test_boss_session.py  test_config.py  test_liepin_extractors.py  test_liepin_service.py  test_liepin_session.py  test_match_reasoner.py  test_renderer.py  test_zhaopin_extractors.py  test_zhaopin_service.py  test_zhaopin_session.py
scripts/: README.md  setup_recruiting_assistant_local.sh  start_copaw_local.sh  wheel_build.sh
scripts/pack/: build_common.py  build_macos.sh  build_win.ps1
(+76 files in other folders)
